Cleanup/fix publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,20 +10,17 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - run: npm ci
-      - run: npm run lint
-      - run: npm test
-      - uses: actions/setup-node@v1
-        with:
-          registry-url: https://registry.npmjs.org/
+          with:
+            node-version: 12.x
+            registry-url: https://registry.npmjs.org/
+            - run: npm ci
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - uses: actions/setup-node@v1
         with:
+          node-version: 12.x
           registry-url: https://npm.pkg.github.com
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GPR_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.GPR_TOKEN}}
