--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           node-version: 12.x
           registry-url: https://npm.pkg.github.com
+          scope: '@djdmbrwsk'
       - run: npm publish
         env:
-          GITHUB_TOKEN: ${{secrets.GPR_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
