--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lint-staged": "^9.4.3",
     "prettier": "1.19.1",
     "rimraf": "^3.0.0",
+    "standard-version": "^7.0.1",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.2"
   },
@@ -55,6 +56,7 @@
     "clean": "rimraf ./build",
     "format": "prettier --write \"**/*.{md,js,json,ts,yaml,yml}\"",
     "lint": "eslint --max-warnings 0 \"{src,test}/**/*.ts\"",
+    "release": "standard-version",
     "test": "jest --verbose --coverage"
   },
   "husky": {
