--- a/package.json
+++ b/package.json
@@ -31,14 +31,21 @@
     "build"
   ],
   "dependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/github": "^7.0.7",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0"
   },
   "devDependencies": {
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/npm": "^7.0.5",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/jest": "^26.0.3",
     "@types/node": "^12.12.47",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
+    "conventional-changelog-conventionalcommits": "^4.4.0",
     "eslint": "^6.7.1",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
@@ -47,7 +54,7 @@
     "lint-staged": "^10.0.7",
     "prettier": "2.1.1",
     "rimraf": "^3.0.0",
-    "standard-version": "^9.0.0",
+    "semantic-release": "^17.1.1",
     "ts-jest": "^25.3.1",
     "typescript": "^4.0.2"
   },
@@ -56,7 +63,6 @@
     "clean": "rimraf ./build",
     "format": "prettier --write \"**/*.{md,js,json,ts,yaml,yml}\"",
     "lint": "eslint --max-warnings 0 \"{src,test}/**/*.ts\"",
-    "release": "standard-version",
     "test": "jest --verbose --coverage"
   },
   "husky": {
