fix: Order of dotenv files loaded
Syncing fix from here https://github.com/facebook/create-react-app/pull/9037

--- a/.releaserc
+++ b/.releaserc
@@ -11,6 +11,7 @@
       {
         "preset": "conventionalcommits",
         "presetConfig": {
+          "header": "Changelog",
           "types": [
             {
               "section": "Features",
