--- a/package.json
+++ b/package.json
@@ -35,15 +35,8 @@
     "dotenv-expand": "^5.1.0"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.1.1",
-    "@semantic-release/npm": "^7.0.5",
-    "@semantic-release/release-notes-generator": "^9.0.1",
-    "conventional-changelog-conventionalcommits": "^4.4.0",
-    "nts-scripts": "^1.0.2",
-    "semantic-release": "^17.1.1"
+    "@djdmbrwsk/common-semantic-release": "^1.0.2",
+    "nts-scripts": "^1.0.2"
   },
   "scripts": {
     "build": "nts-scripts build",
